# airbnb-clone-backend

./: .gitignore  Pipfile  README.md  curriculum.txt  oop_practice.py  pyproject.toml
bookings/: admin.py  models.py  serializers.py  views.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: apps.py  permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
core/: models.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_user.py
experiences/: admin.py  models.py  urls.py  views.py
experiences/migrations/: 0001_initial.py
medias/: admin.py  models.py  serializers.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_auto_20250723_1504.py  0002_auto_20250723_1728.py  0002_initial.py  0003_alter_room_kind.py  0004_alter_room_owner.py  0005_alter_room_amenities.py  0006_room_category.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+10 files in other folders)
